--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_auth: ^5.6.2
   firebase_ui_auth: ^1.17.0
   cloud_firestore: ^5.4.4
+  firebase_storage: ^12.4.9
+  image_picker: ^1.0.4
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
