--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_storage: ^12.4.9
   image_picker: ^1.0.4
   http: ^1.2.1
+  uuid: ^4.4.0
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
