--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,24 @@ dependencies:
   flutter_svg: ^2.2.0
   google_fonts: ^6.2.1
   draggable_widget: ^2.0.0
+  uuid: ^4.4.0
+  flutter_native_splash: ^2.4.6
+  shared_preferences: ^2.3.0
+  tflite_flutter: ^0.11.0
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/models/
 
   fonts:
      - family: Poppins
