--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   firebase_ui_auth: ^1.17.0
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.4.9
-  image_picker: ^1.0.4
+  image_picker: ^1.1.2
   http: ^1.2.1
   intl: ^0.20.2
   flutter_svg: ^2.2.0
@@ -37,7 +37,9 @@ dependencies:
   google_generative_ai: ^0.4.7
   collection: ^1.17.0
   flutter_dotenv: ^5.1.0
-
+  firebase_ml_model_downloader: ^0.3.3+7
+  cached_network_image: ^3.3.0
+  cloudinary_public: ^0.23.1
 
   smooth_page_indicator: ^1.2.1
 
