--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   firebase_ml_model_downloader: ^0.3.3+7
   cached_network_image: ^3.3.0
   cloudinary_public: ^0.23.1
+  firebase_ai: ^2.2.1
+  firebase_vertexai: ^1.8.2
+  flutter_local_notifications: ^17.2.2
+  timezone: ^0.9.4
+  permission_handler: ^11.3.1
 
   smooth_page_indicator: ^1.2.1
 
