--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_app_check: ^0.3.0
   crop_your_image: ^1.0.5
+  pdf: ^3.10.7
+  printing: ^5.12.0
 
 dev_dependencies:
   flutter_test:
